# windmill

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakePresetsCommon.json  LICENSE  LICENSE-WINDMILL.md  NAME  OTHERS.md  README.md  TODO.md  windmill  windmill.cmd  windmill.md
cmake/: shared.cmake
cmake/modules/: BuildCppcheck.cmake  BuildIWYU.cmake  BuildPCRE.cmake  FindClangTidy.cmake  FindCppcheck.cmake  FindDynamicLoader.cmake  FindIWYU.cmake  FindMath.cmake  FindPCRE.cmake  FindRealTime.cmake  FindSocket.cmake  RequireIncludeFile.cmake
cmake/modules/Windmill/: Compilers.cmake  Functions.cmake  Generators.cmake  Systems.cmake
cmake/modules/Windmill/Analyzers/: ClangTidy.cmake  Cppcheck.cmake  GCC.cmake  IWYU.cmake
cmake/modules/Windmill/Compilers/: AppleClang.cmake  Clang.cmake  Common.cmake  GNU.cmake
cmake/modules/Windmill/Features/: InterproceduralOptimization.cmake  PositionIndependentCode.cmake
cmake/modules/Windmill/Systems/: Android.cmake  Common.cmake  Darwin.cmake  Generic.cmake  Linux.cmake  Windows.cmake
cmake/templates/: config.h.in
cmake/toolchains/Windows/: Clang.cmake
cmake/toolchains/Windows/Rules/: Clang.cmake
documents/git/: git.md
extras/: requirements.txt
extras/clang-tidy/: clang-tidy.yml
extras/clion/TextMate/kconfig/: Kconfig.tmLanguage
extras/cppcheck/: rules.xml  supressions.txt
extras/iwyu/mappings/: Template.imp  Windows.imp
extras/python/: dllcopy.py  linter.py  run-clang-format.py  windmill.py
extras/ubuntu/: update-alternatives-clang.sh
firmware/: west.yml
firmware/zephyr/: CMakeLists.txt  Kconfig  README.md  manifest-schema.yml  module.yml
firmware/zephyr/apps/example_blink/: Debug.conf  Kconfig  sample.yaml
firmware/zephyr/apps/example_blink/src/: main.c
firmware/zephyr/apps/example_empty/: CMakeLists.txt  sample.yaml
firmware/zephyr/boards/windmill/custom_plank/: README.md  board.yml  custom_plank.dts  custom_plank.yaml
firmware/zephyr/cmake/sca/cppcheck/: sca.cmake
firmware/zephyr/cmake/sca/gcc/: sca.cmake
firmware/zephyr/cmake/sca/iwyu/: sca.cmake
firmware/zephyr/drivers/blink/: gpio_led.c
firmware/zephyr/drivers/sensor/: Kconfig
firmware/zephyr/include/windmill/: dummy.h
firmware/zephyr/include/windmill/drivers/: blink.h
firmware/zephyr/lib/: CMakeLists.txt  Kconfig
firmware/zephyr/lib/windmill/: CMakeLists.txt  Kconfig
firmware/zephyr/lib/windmill/dummy/: CMakeLists.txt  Kconfig  dummy.c
firmware/zephyr/modules/: modules.cmake
firmware/zephyr/scripts/: fix_double_backslashes.py
firmware/zephyr/submanifests/: 100-windmill.yml  200-zephyr.yml  README.md
